[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/Interfaces/Defeat_interface.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Interfaces/BorderedPanel.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/Interfaces/Defeat_Buttons.gd" type="Script" id=3]

[node name="Defeat_interface" type="MarginContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -40.0
margin_top = -75.0
margin_right = 40.0
margin_bottom = 75.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource( 1 )

[node name="BorderedPanel" parent="." instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 80.0
margin_bottom = 150.0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 80.0
margin_bottom = 150.0
alignment = 1

[node name="Defeat_Text_Container" type="MarginContainer" parent="VBoxContainer"]
margin_top = 17.0
margin_right = 80.0
margin_bottom = 37.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 40, 20 )

[node name="Label" type="Label" parent="VBoxContainer/Defeat_Text_Container"]
margin_right = 80.0
margin_bottom = 20.0
size_flags_vertical = 1
text = "Defeat!"
align = 1
valign = 1

[node name="Time_Remaining_Container" type="MarginContainer" parent="VBoxContainer"]
margin_top = 41.0
margin_right = 80.0
margin_bottom = 61.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 40, 20 )

[node name="Time_Remaining_Label" type="Label" parent="VBoxContainer/Time_Remaining_Container"]
margin_top = 3.0
margin_right = 80.0
margin_bottom = 17.0
text = "1:00"
align = 1

[node name="Points_Container" type="MarginContainer" parent="VBoxContainer"]
margin_top = 65.0
margin_right = 80.0
margin_bottom = 85.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 40, 20 )

[node name="Points_Earned_Label" type="Label" parent="VBoxContainer/Points_Container"]
margin_top = 3.0
margin_right = 80.0
margin_bottom = 17.0
text = "0"
align = 1

[node name="Defeat_Buttons" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 89.0
margin_right = 80.0
margin_bottom = 133.0
script = ExtResource( 3 )

[node name="Retry_Button" type="Button" parent="VBoxContainer/Defeat_Buttons"]
margin_right = 80.0
margin_bottom = 20.0
rect_min_size = Vector2( 60, 20 )
text = "Restart"

[node name="Quit_Button" type="Button" parent="VBoxContainer/Defeat_Buttons"]
margin_top = 24.0
margin_right = 80.0
margin_bottom = 44.0
text = "Quit"
[connection signal="button_up" from="VBoxContainer/Defeat_Buttons/Retry_Button" to="VBoxContainer/Defeat_Buttons" method="_on_Retry_Button_button_up"]
[connection signal="button_up" from="VBoxContainer/Defeat_Buttons/Quit_Button" to="VBoxContainer/Defeat_Buttons" method="_on_Quit_Button_button_up"]
